--- a/functions/package.json
+++ b/functions/package.json
@@ -18,14 +18,17 @@
     "@google-cloud/functions-framework": "^3.2.0",
     "@google-cloud/logging": "^10.5.0",
     "axios": "^1.4.0",
+    "axios-case-converter": "^1.1.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "google-auth-library": "^8.8.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
