--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["src/types/express/index.d.ts"]
   },
   "compileOnSave": true,
   "include": [
